{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 36,
  "lineage": "c70d9422-c750-6436-62a3-40a27162fc93",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic",
            "internal_domain_name_suffix": "fgaohzkyvjwexcis5m2gcpovjb.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linic-vm-ipconf1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/publicIPAddresses/web-linux-public-ip",
                "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/websubnet"
              }
            ],
            "location": "eastus2",
            "name": "web-linixvm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "prakash-eastus2-rg-luueri"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic|/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/web-linixvm-nic-nsg",
            "network_interface_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/web-linixvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-appsubnet-nsg",
            "location": "eastus2",
            "name": "vnet-default-appsubnet-nsg",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-bastionsubnet-nsg",
            "location": "eastus2",
            "name": "vnet-default-bastionsubnet-nsg",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-dbsubnet-nsg",
            "location": "eastus2",
            "name": "vnet-default-dbsubnet-nsg",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "location": "eastus2",
            "name": "websubnet-nsg",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/web-linixvm-nic-nsg",
            "location": "eastus2",
            "name": "web-linixvm-nic-nsg",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "vnet-default-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "vnet-default-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "vnet-default-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "vnet-default-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "vnet-default-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "vnet-default-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "vnet-default-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "vnet-default-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "vnet-default-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/web-linixvm-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "web-linixvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/web-linixvm-nic-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "web-linixvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/web-linixvm-nic-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "web-linixvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "app1-vm",
            "fqdn": "app1-vm.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/publicIPAddresses/web-linux-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.254.66.30",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "web-linux-public-ip",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-appsubnet",
            "name": "vnet-default-appsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "virtual_network_name": "vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-bastionsubnet",
            "name": "vnet-default-bastionsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "virtual_network_name": "vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-dbsubnet",
            "name": "vnet-default-dbsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "virtual_network_name": "vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/websubnet",
            "name": "websubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "virtual_network_name": "vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-appsubnet",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-appsubnet-nsg",
            "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-bastionsubnet",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-dbsubnet",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/vnet-default-dbsubnet-nsg",
            "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/vnet-default-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associaten",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/websubnet",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default/subnets/websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e5e38029-aa58-4b6c-8912-fb38613dd549",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/prakash-eastus2-rg-luueri/providers/Microsoft.Network/virtualNetworks/vnet-default",
            "location": "eastus2",
            "name": "vnet-default",
            "resource_group_name": "prakash-eastus2-rg-luueri",
            "tags": {
              "environment": "staging",
              "owners": "QA"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}